@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-05-29T01:09:44Z",
-  "count_outdated" : 4932,
-  "uniques_outdated" : 2619,
+  "timestamp" : "2025-05-29T12:28:25Z",
+  "count_outdated" : 4934,
+  "uniques_outdated" : 2620,
   "count" : 4971,
   "uniques" : 2644,
   "clones" : [
-    {
-      "timestamp": "2025-05-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-05-16T00:00:00Z",
       "count": 1,
