@@ -1,12 +1,7 @@
 {
-  "count": 38,
+  "count": 37,
   "uniques": 14,
   "clones": [
-    {
-      "timestamp": "2025-05-15T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-05-16T00:00:00Z",
       "count": 1,
